ozone-drm: Change log from error to warning

Log a warning rather than an error since some DRM devices (VGEM) are not
capable of modesetting, so we can't use them (so we can't really do
anything about it, but ignore the device).

BUG=611583
TEST=compiled

Review-Url: https://codereview.chromium.org/2312363002
Cr-Commit-Position: refs/heads/master@{#416755}

Former-commit-id: d8bfddeec6daaf04c6d10b10282e9c9f5de09c6e