ui/ozone/platform/drm/gpu/drm_device_manager.cc
@@ -50,7 +50,7 @@ bool DrmDeviceManager::AddDrmDevice(const base::FilePath& path,
   scoped_refptr<DrmDevice> device = drm_device_generator_->CreateDevice(
       path, std::move(file), !primary_device_);
   if (!device) {
-    LOG(ERROR) << "Could not initialize DRM device for " << path.value();
+    LOG(WARNING) << "Could not initialize DRM device for " << path.value();
     return false;
   }
 
